--- a/index.html
+++ b/index.html
@@ -9,64 +9,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab:wght@600&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
+
 
 </head>
 
-<body>
+<div id="output"></div>
 
-    <div class="header">
-        <h2>
-            Client Side Filter
-        </h2>
-        <h4 class="info">
-            A simple typeahead that filters results as you type.
-        </h4>
 
-    </div>
+<script id="search-template" type="text/template">
 
-    <div class="row m-bot20">
-        <div class="col-xs-12 col-sm-6">
-            <div class="input-group">
-                <input class="form-control search_input" placeholder="Filter Items" type="text" id="filter-input"
-                     />
+    {{log this}}
+
+    <div class="container-fluid m-3">
+
+        <div class="header">
+            <h2>Client Side Filter</h2>
+            <h6 class="info">
+                A simple search that filters results as you type.
+            </h6>
+        </div>
+
+        <div class="row m-bot20">
+            <div class="col-xs-12 col-sm-6">
+                <div class="input-group">
+                    <input class="form-control search_input" placeholder="Filter By Title " type="text"
+                        id="filter-input" />
+
+                </div>
+            </div>
+        </div>
+        <div class="viewing m-bot20" id="viewing" style="display: none;">
+            <div class="col-xs-12 resultview m-bot20">
+                <span class="boldfont">View Results:</span>&nbsp;&nbsp;<span id="resultstring"
+                    class="redtext"></span>&nbsp;&nbsp;
+
+                <svg id="clear" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-x-circle-fill"
+                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.146-3.146a.5.5 0 0 0-.708-.708L8 7.293 4.854 4.146a.5.5 0 1 0-.708.708L7.293 8l-3.147 3.146a.5.5 0 0 0 .708.708L8 8.707l3.146 3.147a.5.5 0 0 0 .708-.708L8.707 8l3.147-3.146z" />
+                </svg>
+
 
             </div>
         </div>
-    </div>
-    <div class="viewing m-bot20" id="viewing" style="display: none;">
-        <div class="col-xs-12 resultview m-bot20">
-            <span class="boldfont">View Results:</span>&nbsp;&nbsp;<span id="resultstring"
-                class="redtext"></span>&nbsp;&nbsp;
 
-                <svg id="clear" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-x-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-4.146-3.146a.5.5 0 0 0-.708-.708L8 7.293 4.854 4.146a.5.5 0 1 0-.708.708L7.293 8l-3.147 3.146a.5.5 0 0 0 .708.708L8 8.707l3.146 3.147a.5.5 0 0 0 .708-.708L8.707 8l3.147-3.146z"/>
-                  </svg>
-                
-            
+        <div id="list-content" class="mt-5">
+            <div class="row">
+                {{#each this}}
+                <div class="content-container col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="title">{{this.name}}</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sollicitudin orci
+                                dui, sit amet blandit magna rutrum et.</p>
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
         </div>
+
+
     </div>
 
 
-    <div id="list-content">
-        <div class="row">
-            <div class="content-container col-md-3">
-                <div class="title">Product Name 1</div>
-            </div>
-            <div class="content-container col-md-3">
-                <div class="title">Another Product</div>
-            </div>
-            <div class="content-container col-md-3">
-                <div class="title">Test Product</div>
-            </div>
-            <div class="content-container col-md-3">
-                <div class="title">Name of Product</div>
-            </div>
+</script>
 
-        </div>
-    </div>
-
-
-</body>
 
 <!-- JavaScript and dependencies -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -75,6 +89,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
     integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
     crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 
 <script src="filter.js"></script>
 <script src="index.js"></script>
